src/tests/snapshots/synoik__tests__window_opening__check_target_output_and_workspace@ws2-fsF-wfsB2-spA2.snap
---
source: src/tests/window_opening.rs
description: "open on workspace: ws-2\nopen fullscreen: false\nwant fullscreen: B2\nset parent: A2"
expression: snapshot
---
final monitor: headless-2
final workspace: 0 (ws-2)

initial configure:
size: 500 × 1028, bounds: 1868 × 1028, states: []

post-map configures:
size: 1 × 1, bounds: 1900 × 1060, states: []
